2008-08-13  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/rs6000/rs6000-c.c (rs6000_cpu_cpp_builtins): Predefine
	__PPU__ when targeting the Cell/B.E. PPU processor.

2008-08-12  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37014
	* expr.c (expand_expr_real_1): Handle TRUTH_ANDIF_EXPR
	and TRUTH_ORIF_EXPR.
	* dojump.c (do_jump): Likewise.

2008-08-12  Aldy Hernandez  <aldyh@redhat.com>

	PR c/35746
	* gimplify.c (gimplify_expr): Do not convert MODIFY_EXPR to
	GIMPLE_MODIFY_STMT upon GS_ERROR.

2008-08-12  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (spu_safe_dma): Respect TARGET_SAFE_DMA.

2008-08-12  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.h (DWARF_FRAME_RETURN_COLUMN): Define.

2008-08-12  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36688
	* gimplify.c (gimplify_modify_expr_rhs): Test TREE_READONLY
	on the VAR_DECL instead of TYPE_READONLY on its type.

2008-08-11  Michael Matz  <matz@suse.de>

	PR target/36613
	* reload.c (push_reload): Merge in,out,in_reg,out_reg members
	for reused reload, instead of overwriting them.

2008-08-11  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/36998
	* dwarf2out.c (compute_barrier_args_size_1,
	compute_barrier_args_size): Temporarily remove assertions.

2008-08-07  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37042
	* tree-ssa-alias-warnings.c (nonstandard_alias_p): Ref-all
	pointers can access anything.

2008-08-06  Aldy Hernandez  <aldyh@redhat.com>

	PR middle-end/35432
	* gimplify.c (gimplify_modify_expr): Do not optimize zero-sized types
	if want_value.

2008-08-06  Maxim Kuvyrkov  <maxim@codesourcery.com>

	Backport from mainline:
	2008-08-06  Maxim Kuvyrkov  <maxim@codesourcery.com>

	PR target/35659
	* haifa-sched.c (sched_insn_is_legitimate_for_speculation_p): Move ...
	* sched-deps.c (sched_insn_is_legitimate_for_speculation_p): ... here.
	Don't allow predicated instructions for data speculation.